--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "import pandas as pd#Your code here"
    ]
   },
   {
