Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('Data/Zipcode_Demos.csv')\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
