--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.tail()"
+   ]
   },
   {
    "cell_type": "markdown",
