--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prev_count = 10**3\n",
+    "for row in df.index:\n",
+    "    count = 0\n",
+    "    for entry in df.iloc[row].isnull():\n",
+    "        if entry:\n",
+    "            count += 1\n",
+    "    if count != prev_count and row!=0:\n",
+    "        print('On row {} there are {} null values. The previous row had {} null values.'.format(row, count, prev_count))\n",
+    "    prev_count = count"
+   ]
   },
   {
    "cell_type": "markdown",
