Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prev_count = 10**3\n",
+    "prev_count = 10\n",
     "for row in df.index:\n",
     "    count = 0\n",
     "    for entry in df.iloc[row].isnull():\n",
