--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df1 = pd.read_csv('Data/Zipcode_Demos.csv', skiprows=[1], nrows=45, usecols=[0,1,2])\n",
+    "df1.head()"
+   ]
   },
   {
    "cell_type": "markdown",
