--- a/index.ipynb
+++ b/index.ipynb
@@ -95,6 +95,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_csv('Data/Zipcode_Demos.csv', skiprows=47)\n",
+    "df2.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
