--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Dataframe is really two table views, one on top of the other. The first is a summary view of the raw data below. There is also a blank row at row 1 in the file.\n",
+    "#Dataframe is really two table views, one on top of the other. \n",
+    "#The first is a summary view of the raw data below. \n",
+    "#There is also a blank row at row 1 in the file.\n",
     "\n",
     "prev_count = 10\n",
     "for row in df.index:\n",
